kubernetes/apps/default/misc-ingress/app/ingress-internal-octo.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octo
  # annotations:
  #   nginx.ingress.kubernetes.io/backend-protocol: HTTP
  #   nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
spec:
  ingressClassName: internal
  rules:
    - host: &host "octo.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: octo
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: octo
subsets:
  - addresses:
      - ip: "${SECRET_OCTO_IP}"
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: octo
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
